debug for  docker env